--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@stacks/encryption": "^4.3.0",
     "axios": "^0.27.2",
     "cryptojs": "^2.5.3"
   }
